# eran-front

./: .gitignore  pyproject.toml
css/: flowbite.css
eran_front/css/: src.css
eran_front/html/: base.html
eran_front/html/partials/: footer.html  sidebar.html
eran_front/js/: darkmode.js
front/html/: base.html
front/html/partials/: header.html  sidebar.html
